Batch order creation and cancelation for CLOB and injective
