# src/clob/clob.controllers.ts
@@ -3,6 +3,7 @@ import { EstimateGasResponse } from '../amm/amm.requests';
 import { NetworkSelectionRequest } from '../services/common-interfaces';
 import { getChain, getConnector } from '../services/connection-manager';
 import {
+  ClobBatchUpdateRequest,
   ClobDeleteOrderRequest,
   ClobDeleteOrderResponse,
   ClobGetOrderRequest,
@@ -51,19 +52,19 @@ export async function getOrderBooks(
   request: ClobOrderbookRequest
 ): Promise<ClobOrderbookResponse> {
   const startTimestamp: number = Date.now();
-   await getChain(request.chain, request.network);
-   const connector: any = await getConnector(
+  await getChain(request.chain, request.network);
+  const connector: any = await getConnector(
     request.chain,
     request.network,
     request.connector
-   );
-   const result = await connector.orderBook(request);
-   return {
-     network: request.network,
-     timestamp: startTimestamp,
-     latency: latency(startTimestamp, Date.now()),
-     ...result,
-   };
+  );
+  const result = await connector.orderBook(request);
+  return {
+    network: request.network,
+    timestamp: startTimestamp,
+    latency: latency(startTimestamp, Date.now()),
+    ...result,
+  };
 }
 
 /**
@@ -75,19 +76,19 @@ export async function getTickers(
   request: ClobTickerRequest
 ): Promise<ClobTickerResponse> {
   const startTimestamp: number = Date.now();
-   await getChain(request.chain, request.network);
-   const connector: any = await getConnector(
+  await getChain(request.chain, request.network);
+  const connector: any = await getConnector(
     request.chain,
     request.network,
     request.connector
-   );
-   const result = await connector.ticker(request);
-   return {
-     network: request.network,
-     timestamp: startTimestamp,
-     latency: latency(startTimestamp, Date.now()),
-     ...result,
-   };
+  );
+  const result = await connector.ticker(request);
+  return {
+    network: request.network,
+    timestamp: startTimestamp,
+    latency: latency(startTimestamp, Date.now()),
+    ...result,
+  };
 }
 
 /**
@@ -99,19 +100,19 @@ export async function getOrders(
   request: ClobGetOrderRequest
 ): Promise<ClobGetOrderResponse> {
   const startTimestamp: number = Date.now();
-   await getChain(request.chain, request.network);
-   const connector: any = await getConnector(
+  await getChain(request.chain, request.network);
+  const connector: any = await getConnector(
     request.chain,
     request.network,
     request.connector
-   );
-   const result = await connector.orders(request);
-   return {
-     network: request.network,
-     timestamp: startTimestamp,
-     latency: latency(startTimestamp, Date.now()),
-     ...result,
-   };
+  );
+  const result = await connector.orders(request);
+  return {
+    network: request.network,
+    timestamp: startTimestamp,
+    latency: latency(startTimestamp, Date.now()),
+    ...result,
+  };
 }
 
 /**
@@ -123,19 +124,19 @@ export async function postOrder(
   request: ClobPostOrderRequest
 ): Promise<ClobPostOrderResponse> {
   const startTimestamp: number = Date.now();
-   await getChain(request.chain, request.network);
-   const connector: any = await getConnector(
+  await getChain(request.chain, request.network);
+  const connector: any = await getConnector(
     request.chain,
     request.network,
     request.connector
-   );
-   const result = await connector.postOrder(request);
-   return {
-     network: request.network,
-     timestamp: startTimestamp,
-     latency: latency(startTimestamp, Date.now()),
-     ...result,
-   };
+  );
+  const result = await connector.postOrder(request);
+  return {
+    network: request.network,
+    timestamp: startTimestamp,
+    latency: latency(startTimestamp, Date.now()),
+    ...result,
+  };
 }
 
 /**
@@ -147,19 +148,44 @@ export async function deleteOrder(
   request: ClobDeleteOrderRequest
 ): Promise<ClobDeleteOrderResponse> {
   const startTimestamp: number = Date.now();
-   await getChain(request.chain, request.network);
-   const connector: any = await getConnector(
+  await getChain(request.chain, request.network);
+  const connector: any = await getConnector(
     request.chain,
     request.network,
     request.connector
-   );
-   const result = await connector.deleteOrder(request);
-   return {
-     network: request.network,
-     timestamp: startTimestamp,
-     latency: latency(startTimestamp, Date.now()),
-     ...result,
-   };
+  );
+  const result = await connector.deleteOrder(request);
+  return {
+    network: request.network,
+    timestamp: startTimestamp,
+    latency: latency(startTimestamp, Date.now()),
+    ...result,
+  };
+}
+
+/**
+ * POST /batchOrders
+ *
+ *
+ * @param request
+ */
+export async function batchOrders(
+  request: ClobBatchUpdateRequest
+): Promise<ClobDeleteOrderResponse> {
+  const startTimestamp: number = Date.now();
+  await getChain(request.chain, request.network);
+  const connector: any = await getConnector(
+    request.chain,
+    request.network,
+    request.connector
+  );
+  const result = await connector.batchOrders(request);
+  return {
+    network: request.network,
+    timestamp: startTimestamp,
+    latency: latency(startTimestamp, Date.now()),
+    ...result,
+  };
 }
 
 /**
